--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,16 @@
 {
     "cSpell.words": [
-        "allpost"
+        "allpost",
+        "blogpost",
+        "createpost",
+        "deletepost",
+        "dgrijalva",
+        "getblog",
+        "gofiber",
+        "gorm",
+        "Meghwar",
+        "Projec",
+        "uniquepost",
+        "updatepost"
     ]
 }
