--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "gofiber",
         "gorm",
         "Meghwar",
+        "Opps",
         "Projec",
         "uniquepost",
         "updatepost"
