--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,14 +3,17 @@
         "allpost",
         "blogpost",
         "createpost",
+        "dafpl",
         "deletepost",
         "dgrijalva",
         "foreignkey",
         "getblog",
         "gofiber",
+        "gomail",
         "gorm",
         "Meghwar",
         "Navv",
+        "onrqhkudckxmmxku",
         "Opps",
         "Projec",
         "signin",
