--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "onrqhkudckxmmxku",
         "Opps",
         "Projec",
+        "roleid",
         "signin",
         "singleblog",
         "uniquepost",
