--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "roleid",
         "signin",
         "singleblog",
+        "tidwall",
         "uniquepost",
         "updatepost",
         "userid"
