--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "roleid",
         "signin",
         "singleblog",
+        "stretchr",
         "tidwall",
         "uniquepost",
         "updatepost",
