--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "gomail",
         "gorm",
         "jamshoro",
+        "johnrocco",
         "Meghwar",
         "Navv",
         "onrqhkudckxmmxku",
