--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "blogpost",
         "createpost",
         "dafpl",
+        "dbname",
         "deletepost",
         "dgrijalva",
         "foreignkey",
@@ -21,6 +22,8 @@
         "roleid",
         "signin",
         "singleblog",
+        "sslmode",
+        "SSMODE",
         "stretchr",
         "tidwall",
         "uniquepost",
