--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "abctry",
+        "adminadmin",
         "allpost",
+        "bckg",
         "blogpost",
         "createpost",
         "dafpl",
@@ -29,6 +32,7 @@
         "uniquepost",
         "updatepost",
         "userid",
-        "wheather"
+        "wheather",
+        "xvlbz"
     ]
 }
