--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
         "stretchr",
         "tidwall",
         "uniquepost",
+        "updateduser",
         "updatepost",
         "userid",
         "wheather",
