--- a/react-auth-2/package.json
+++ b/react-auth-2/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.42.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
